features: added notes on the fretboard

--- a/index.html
+++ b/index.html
@@ -144,96 +144,96 @@
 							<div class="divTableCell"></div>
 						</div>
 					</div>
-					<div class="guitarStringsE">
-						<div class="guitarStringsNotes ENote"></div>
-						<div class="guitarStringsNotes FNote"></div>
-						<div class="guitarStringsNotes F#Note"></div>
-						<div class="guitarStringsNotes GNote"></div>
-						<div class="guitarStringsNotes G#Note"></div>
-						<div class="guitarStringsNotes ANote"></div>
-						<div class="guitarStringsNotes A#Note"></div>
-						<div class="guitarStringsNotes BNote"></div>
-						<div class="guitarStringsNotes CNote"></div>
-						<div class="guitarStringsNotes C#Note"></div>
-						<div class="guitarStringsNotes DNote"></div>
-						<div class="guitarStringsNotes D#Note"></div>
-						<div class="guitarStringsNotes ENote"></div>
-					</div>
-					<div class="guitarStringsA">
-						<div class="guitarStringsNotes ANote"></div>
-						<div class="guitarStringsNotes A#Note"></div>
-						<div class="guitarStringsNotes BNote"></div>
-						<div class="guitarStringsNotes CNote"></div>
-						<div class="guitarStringsNotes C#Note"></div>
-						<div class="guitarStringsNotes DNote"></div>
-						<div class="guitarStringsNotes D#Note"></div>
-						<div class="guitarStringsNotes ENote"></div>
-						<div class="guitarStringsNotes FNote"></div>
-						<div class="guitarStringsNotes F#Note"></div>
-						<div class="guitarStringsNotes GNote"></div>
-						<div class="guitarStringsNotes G#Note"></div>
-						<div class="guitarStringsNotes ANote"></div>
-					</div>
-					<div class="guitarStringsD">
-						<div class="guitarStringsNotes DNote"></div>
-						<div class="guitarStringsNotes D#Note"></div>
-						<div class="guitarStringsNotes ENote"></div>
-						<div class="guitarStringsNotes FNote"></div>
-						<div class="guitarStringsNotes F#Note"></div>
-						<div class="guitarStringsNotes GNote"></div>
-						<div class="guitarStringsNotes G#Note"></div>
-						<div class="guitarStringsNotes ANote"></div>
-						<div class="guitarStringsNotes A#Note"></div>
-						<div class="guitarStringsNotes BNote"></div>
-						<div class="guitarStringsNotes CNote"></div>
-						<div class="guitarStringsNotes C#Note"></div>
-						<div class="guitarStringsNotes DNote"></div>
-					</div>
-					<div class="guitarStringsG">
-						<div class="guitarStringsNotes GNote"></div>
-						<div class="guitarStringsNotes G#Note"></div>
-						<div class="guitarStringsNotes ANote"></div>
-						<div class="guitarStringsNotes A#Note"></div>
-						<div class="guitarStringsNotes BNote"></div>
-						<div class="guitarStringsNotes CNote"></div>
-						<div class="guitarStringsNotes C#Note"></div>
-						<div class="guitarStringsNotes DNote"></div>
-						<div class="guitarStringsNotes D#Note"></div>
-						<div class="guitarStringsNotes ENote"></div>
-						<div class="guitarStringsNotes FNote"></div>
-						<div class="guitarStringsNotes F#Note"></div>
-						<div class="guitarStringsNotes GNote"></div>
-					</div>
-					<div class="guitarStringsB">
-						<div class="guitarStringsNotes BNote"></div>
-						<div class="guitarStringsNotes CNote"></div>
-						<div class="guitarStringsNotes C#Note"></div>
-						<div class="guitarStringsNotes DNote"></div>
-						<div class="guitarStringsNotes D#Note"></div>
-						<div class="guitarStringsNotes ENote"></div>
-						<div class="guitarStringsNotes FNote"></div>
-						<div class="guitarStringsNotes F#Note"></div>
-						<div class="guitarStringsNotes GNote"></div>
-						<div class="guitarStringsNotes G#Note"></div>
-						<div class="guitarStringsNotes ANote"></div>
-						<div class="guitarStringsNotes A#Note"></div>
-						<div class="guitarStringsNotes BNote"></div>
-					</div>
-					<div class="guitarStringse">
-						<div class="guitarStringsNotes ENote"></div>
-						<div class="guitarStringsNotes FNote"></div>
-						<div class="guitarStringsNotes F#Note"></div>
-						<div class="guitarStringsNotes GNote"></div>
-						<div class="guitarStringsNotes G#Note"></div>
-						<div class="guitarStringsNotes ANote"></div>
-						<div class="guitarStringsNotes A#Note"></div>
-						<div class="guitarStringsNotes BNote"></div>
-						<div class="guitarStringsNotes CNote"></div>
-						<div class="guitarStringsNotes C#Note"></div>
-						<div class="guitarStringsNotes DNote"></div>
-						<div class="guitarStringsNotes D#Note"></div>
-						<div class="guitarStringsNotes ENote"></div>
-					</div>
+				</div>
+				<div class="guitarStrings" id="guitarStringsE">
+					<div class="guitarStringsNotes ENote" id="E0"></div>
+					<div class="guitarStringsNotes FNote" id="F1"></div>
+					<div class="guitarStringsNotes F#Note" id="Gb1"></div>
+					<div class="guitarStringsNotes GNote" id="G1"></div>
+					<div class="guitarStringsNotes G#Note" id="Ab1"></div>
+					<div class="guitarStringsNotes ANote" id="A1"></div>
+					<div class="guitarStringsNotes A#Note" id="Bb1"></div>
+					<div class="guitarStringsNotes BNote" id="B1"></div>
+					<div class="guitarStringsNotes CNote" id="C1"></div>
+					<div class="guitarStringsNotes C#Note" id="Db1"></div>
+					<div class="guitarStringsNotes DNote" id="D1"></div>
+					<div class="guitarStringsNotes D#Note" id="Eb1"></div>
+					<div class="guitarStringsNotes ENote" id="E1"></div>
+				</div>
+				<div class="guitarStrings" id="guitarStringsA">
+					<div class="guitarStringsNotes ANote" id="A0"></div>
+					<div class="guitarStringsNotes A#Note" id="Bb2"></div>
+					<div class="guitarStringsNotes BNote" id="B2"></div>
+					<div class="guitarStringsNotes CNote" id="C2"></div>
+					<div class="guitarStringsNotes C#Note" id="Db2"></div>
+					<div class="guitarStringsNotes DNote" id="D2"></div>
+					<div class="guitarStringsNotes D#Note" id="Eb2"></div>
+					<div class="guitarStringsNotes ENote" id="E2"></div>
+					<div class="guitarStringsNotes FNote" id="F2"></div>
+					<div class="guitarStringsNotes F#Note" id="Gb2"></div>
+					<div class="guitarStringsNotes GNote" id="G2"></div>
+					<div class="guitarStringsNotes G#Note" id="Ab2"></div>
+					<div class="guitarStringsNotes ANote" id="A2"></div>
+				</div>
+				<div class="guitarStrings" id="guitarStringsD">
+					<div class="guitarStringsNotes DNote" id="D0"></div>
+					<div class="guitarStringsNotes D#Note" id="Eb3"></div>
+					<div class="guitarStringsNotes ENote" id="E3"></div>
+					<div class="guitarStringsNotes FNote" id="F3"></div>
+					<div class="guitarStringsNotes F#Note" id="Gb3"></div>
+					<div class="guitarStringsNotes GNote" id="G3"></div>
+					<div class="guitarStringsNotes G#Note" id="Ab3"></div>
+					<div class="guitarStringsNotes ANote" id="A3"></div>
+					<div class="guitarStringsNotes A#Note" id="Bb3"></div>
+					<div class="guitarStringsNotes BNote" id="B3"></div>
+					<div class="guitarStringsNotes CNote" id="C3"></div>
+					<div class="guitarStringsNotes C#Note" id="Db3"></div>
+					<div class="guitarStringsNotes DNote" id="D3"></div>
+				</div>
+				<div class="guitarStrings" id="guitarStringsG">
+					<div class="guitarStringsNotes GNote" id="G0"></div>
+					<div class="guitarStringsNotes G#Note" id="Ab4"></div>
+					<div class="guitarStringsNotes ANote" id="A4"></div>
+					<div class="guitarStringsNotes A#Note" id="Bb4"></div>
+					<div class="guitarStringsNotes BNote" id="B4"></div>
+					<div class="guitarStringsNotes CNote" id="C4"></div>
+					<div class="guitarStringsNotes C#Note" id="Db4"></div>
+					<div class="guitarStringsNotes DNote" id="D4"></div>
+					<div class="guitarStringsNotes D#Note" id="Eb4"></div>
+					<div class="guitarStringsNotes ENote" id="E4"></div>
+					<div class="guitarStringsNotes FNote" id="F4"></div>
+					<div class="guitarStringsNotes F#Note" id="Gb4"></div>
+					<div class="guitarStringsNotes GNote" id="G4"></div>
+				</div>
+				<div class="guitarStrings" id="guitarStringsB">
+					<div class="guitarStringsNotes BNote" id="B0"></div>
+					<div class="guitarStringsNotes CNote" id="C5"></div>
+					<div class="guitarStringsNotes C#Note" id="Db5"></div>
+					<div class="guitarStringsNotes DNote" id="D5"></div>
+					<div class="guitarStringsNotes D#Note" id="Eb5"></div>
+					<div class="guitarStringsNotes ENote" id="E5"></div>
+					<div class="guitarStringsNotes FNote" id="F5"></div>
+					<div class="guitarStringsNotes F#Note" id="Gb5"></div>
+					<div class="guitarStringsNotes GNote" id="G5"></div>
+					<div class="guitarStringsNotes G#Note" id="Ab5"></div>
+					<div class="guitarStringsNotes ANote" id="A5"></div>
+					<div class="guitarStringsNotes A#Note" id="Bb5"></div>
+					<div class="guitarStringsNotes BNote" id="B5"></div>
+				</div>
+				<div class="guitarStrings" id="guitarStringse">
+					<div class="guitarStringsNotes ENote" id="e0"></div>
+					<div class="guitarStringsNotes FNote" id="F6"></div>
+					<div class="guitarStringsNotes F#Note" id="Gb6"></div>
+					<div class="guitarStringsNotes GNote" id="G6"></div>
+					<div class="guitarStringsNotes G#Note" id="Ab6"></div>
+					<div class="guitarStringsNotes ANote" id="A6"></div>
+					<div class="guitarStringsNotes A#Note" id="Bb6"></div>
+					<div class="guitarStringsNotes BNote" id="B6"></div>
+					<div class="guitarStringsNotes CNote" id="C6"></div>
+					<div class="guitarStringsNotes C#Note" id="Db6"></div>
+					<div class="guitarStringsNotes DNote" id="D6"></div>
+					<div class="guitarStringsNotes D#Note" id="Eb6"></div>
+					<div class="guitarStringsNotes ENote" id="E6"></div>
 				</div>
 				<div class="divTable" id="bassFretboard">
 					<div class="divTableBody">
